# pix-engine

./: .gitignore  .travis.yml  .vimspector.json  CHANGELOG.md  CHANGELOG2.md  Cargo.toml  LICENSE.md  README.md  build.rs  cliff.toml  release-plz.toml  rust-toolchain.toml  shell.nix
.cargo-husky/hooks/: commit-msg  pre-push
.github/: dependabot.yml  mergify.yml
.github/actions/install-linuxbrew/: action.yml
.github/actions/install-sdl2/: action.yml
.github/workflows/: cd.yml  ci.yml  coverage.yml  dependabot.yml  install_linuxbrew.yml  install_sdl2.yml  outdated.yml  package.yml  publish.yml  release-pr.yml  release.yml  triage.yml
assets/: GN-Koharu-iro_Sunra.txt  UnPilgiBold.txt  emulogic.txt
audio/: melancholy.txt
docs/: api.md
examples/: 2d_raycasting.rs  3d_raytracing.rs  asteroids.rs  audio.rs  audio_callback.rs  audio_capture_and_replay.rs  audio_queue.rs  blank_app.rs  color_constants.rs  colors.rs  demo.rs  drawing.rs  flocking.rs  fluid_simulation.rs  gui.rs  hello_world.rs  image.rs  imgui.rs  logging.rs  matrix.rs  maze.rs  raycasting.rs  raytracing.rs  shapes.rs  template.rs  textures.rs  ui.rs  windows.rs
examples/maze/: astar_solver.rs  cell.rs  main.rs  maze.rs  maze_creator.rs  timer.rs
src/: app_state.rs  appstate.rs  audio.rs  color.rs  common.rs  core.rs  draw.rs  driver.rs  engine.rs  error.rs  event.rs  graphics.rs  graphics2.rs  gui.rs  image.rs  lib.rs  lighting.rs  main.rs  math.rs  ops.rs  pixel.rs  platform.rs  renderer.rs  serialize.rs  shape.rs  state.rs  state_data.rs  texture.rs  time.rs  transform.rs  typography.rs  utils.rs  vector.rs  window.rs
src/color/: constants.rs  conversion.rs  hsv.rs  ops.rs  rgb.rs
src/core/: appstate.rs  color.rs  common.rs  draw.rs  engine.rs  ops.rs  shape.rs  state.rs  texture.rs  window.rs
src/core/color/: conversion.rs  ops.rs
src/core/shape/: circle.rs  ellipse.rs  line.rs  point.rs  quad.rs  rect.rs  sphere.rs  triangle.rs
src/core/state/: environment.rs  settings.rs
src/driver/: sdl2.rs
src/driver/sdl2/: event.rs
src/graphics/: lighting.rs
src/gui/: button.rs  checkbox.rs  element.rs  keys.rs  layout.rs  list.rs  mouse.rs  radio.rs  scroll.rs  selection.rs  slider.rs  state.rs  system.rs  text.rs  theme.rs  widgets.rs  widgets2.rs
src/gui/widgets/: field.rs  select.rs  slider.rs  text.rs  tooltip.rs
src/math/: vector.rs
src/renderer/: sdl.rs  sdl2.rs  wasm.rs
src/renderer/sdl/: audio.rs  event.rs  texture.rs  textures.rs  window.rs
src/renderer/sdl2/: event.rs  render.rs
src/renderer/wasm/: audio.rs  texture.rs  window.rs
src/shape/: ellipse.rs  line.rs  point.rs  quad.rs  rect.rs  sphere.rs  triangle.rs
src/state/: draw.rs  environment.rs  rendering.rs  setting.rs  settings.rs  transform.rs  window.rs
src/state_data/: environment.rs  rendering.rs  setting.rs
tests/: core.rs  engine.rs  pix-engine.rs
