[package]
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
categories = ["game-development", "game-engines", "graphics", "gui", "rendering"]
description = "A cross-platform graphics/UI engine framework for simple games, visualizations, and graphics demos."
documentation = "https://docs.rs/pix-engine"
edition = "2021"
keywords = ["game-engine", "graphics", "ui", "gui", "rendering"]
license = "MIT OR Apache-2.0"
name = "pix-engine"
repository = "https://github.com/lukexor/pix-engine.git"
resolver = "2"
version = "0.5.5"
exclude = ["/images", "/audio"]

[package.metadata]
msrv = "1.59.0"

[package.metadata.docs.rs]
features = ["serde"]
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.2.1"
chrono = "0.4.19"
lazy_static = "1.4.0"
num-traits = "0.2.14"
png = "0.17.5"
serde = { version = "1.0.136", features = ["derive"], optional = true }
rand = "0.8.5"
lru = "0.7.5"
anyhow = "1.0.57"
thiserror = "1.0.29"
log = "0.4.16"

[dev-dependencies]
rayon = "1.5.1"
pretty_env_logger = "0.4.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["prepush-hook", "run-cargo-test", "run-cargo-clippy"]

[features]
default = []
opengl = []
# TODO: `backtrace` feature can be removed when `Backtrace` lands in stable
backtrace = ["anyhow/backtrace"]
vcpkg = ["sdl2/static-link", "sdl2/use-vcpkg"]
debug_ui = []

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
sdl2 = { version = "0.35.2", default_features = false, features = ["gfx", "image", "mixer", "ttf", "unsafe_textures"] }

# Reasonable performance for development
[profile.dev-opt]
inherits = "dev"
opt-level = 2

[profile.release]
codegen-units = 1
lto = true

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
