[package]
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
categories = ["game-development", "game-engines", "graphics", "gui", "rendering"]
description = "A cross-platform graphics/UI engine framework for simple games, visualizations, and graphics demos."
documentation = "https://docs.rs/pix-engine"
edition = "2021"
keywords = ["game-engine", "graphics", "ui", "gui", "rendering"]
license = "MIT OR Apache-2.0"
name = "pix-engine"
repository = "https://github.com/lukexor/pix-engine.git"
resolver = "2"
version = "0.6.0"
exclude = ["/images", "/audio", "/pkg"]
build = "build.rs"

[package.metadata]
msrv = "1.59.0"

[package.metadata.docs.rs]
features = ["serde"]
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.64"
bitflags = "1.2.1"
chrono = "0.4.22"
log = "0.4.17"
lru = "0.7.8"
num-traits = "0.2.15"
once_cell = "1.14.0"
png = "0.17.6"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"], optional = true }
thiserror = "1.0.35"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rayon = "1.5.2"
pretty_env_logger = "0.4.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]

[features]
default = []
opengl = []
# TODO: `backtrace` feature can be removed when `Backtrace` lands in stable https://github.com/rust-lang/rust/issues/53487
backtrace = ["anyhow/backtrace"]
debug_ui = []

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
sdl2 = { version = "0.35.2", default_features = false, features = ["gfx", "image", "mixer", "ttf", "unsafe_textures"] }

# Reasonable performance for development
[profile.dev-opt]
inherits = "dev"
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
